# rnamer

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: cd.yaml  ci.yaml
src/: main.rs
